--- a/package.json
+++ b/package.json
@@ -4,22 +4,35 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "start:db": "docker-compose up",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.1.1",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
+    "lucide-react": "^0.268.0",
     "next": "13.4.18",
-    "postcss": "8.4.28",
+    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.22.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/bcryptjs": "^2.4.2",
+    "autoprefixer": "^10.4.15",
+    "daisyui": "^3.5.1",
+    "postcss": "^8.4.28",
+    "prisma": "^5.1.1",
+    "tailwindcss": "^3.3.3"
   }
 }
